# Water-me

./: README.md  index.html  package-lock.json  package.json
docs/: 00-Vision.md  01-PRD.md  02-Architecture.md  03-Roadmap.md  05-UIUX.md
docs/design/: MVP.md  overlay-mode-picker.html  overlay-modes-preview.html  preview.html
docs/skills/: SKILL.md
scripts/: gen-plant-variants.cjs
src/: App.css  App.tsx  Onboard.tsx  Overlay.tsx  Plant.tsx  Settings.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activity.rs  commands.rs  lib.rs  main.rs  reminder.rs  store.rs
src-tauri/src/activity/: mod.rs  state.rs
src-tauri/src/commands/: mod.rs  reminder.rs  settings.rs
src-tauri/src/platform/: autostart.rs  fullscreen.rs  mod.rs  tray.rs
src-tauri/src/reminder/: activity.rs  engine.rs  mod.rs  state.rs
src-tauri/src/store/: history.rs  mod.rs  settings.rs
src/assets/: Plant_watered.json  Plant_wilt.json
src/lib/: ipc.ts
src/windows/onboard/: Onboard.tsx
src/windows/overlay/: Overlay.tsx
src/windows/settings/: Settings.tsx
